--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -67,11 +67,33 @@
   padding-bottom: 4%;
   border-bottom: 1px solid $oslo-gray;
   color:$black-tone-1;
-  span,label{
+  span,label,p{
     color: $purple;
     cursor: pointer;
     &:hover{
       text-decoration: underline;
     }
+  }
+}
+
+
+.modal-save{
+  margin-bottom: 1.5%;
+  background: $purple;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 700;
+  outline: none !important;
+  box-shadow: none !important;
+  border-color: $purple;
+  &:focus{
+    box-shadow: none;
+    background: $purple;
+    outline: none !important;
+  }
+  &:hover{
+    box-shadow: none !important;
+    outline: none !important;
+    background: $tapestryapprox;
   }
 }
