Agent profile issue fixed

--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -97,3 +97,13 @@
     background: $tapestryapprox;
   }
 }
+
+.date-picker{
+  width: 100%;
+  border: 1px solid #888C94;
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 9px 12px;
+  color: #2F2F2F;
+  opacity: 0.85;
+}
